[package]
name = "a-stack-based-language"
version = "0.1.0"
authors = ["tcallred <taylor.allred21@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2"
ndarray = "0.15.3"
im-rc = "15.1.0"
tailcall = "0.1.6"
